--- a/P003006.opf/layers/v001/Pagination.yml
+++ b/P003006.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 68658386b9d6481d9baa980a11956f67
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   2f9097f026f34ac4afd4bea795ed2b8b:
