--- a/P003006.opf/meta.yml
+++ b/P003006.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P003006
 initial_creation_type: ocr
 created_at: 23/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:33:55.085380
 source_metadata:
   id: bdr:W3CN5111
   title: རྗེ་བཙུན་སྒྲོལ་མའི་བསྟོད་པ་དང་ཕན་ཡོན་གྱི་འགྲེལ་པ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 114
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
